Don't drop mouse wheel events with phase ending information in RWHVCF.

Currently, RenderWidgetHostViewChildFrame::ProcessMouseWheelEvent drops
mouse wheel events that have deltas of 0. However, we may see mouse
wheel events carrying phase ending information that have deltas of 0.
When these are dropped, MouseWheelEventQueue is not informed that
the user's gesture has ended. So when it sees subsequent wheel events,
it considers them all part of the same gesture.

By allowing events with phase ending information through,
MouseWheelEventQueue is able to properly start and end gesture scrolls.

BUG=694393, 628742
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_site_isolation

Review-Url: https://codereview.chromium.org/2866523002
Cr-Commit-Position: refs/heads/master@{#471797}

Former-commit-id: bf5beebbd5dea348bda215061cea04289d86e9f1